[package]
authors = ["James Cole <jamescole.uk@gmail.com>"]
description = "A selection of pastel colours for use with termion"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "pastel_colours"
repository = "https://github.com/jamescoleuk/pastel_colours"
version = "0.1.3"

[dependencies]
termion = "1.5.6"
